--- a/app/src/main/res/layout/list_item_sitio.xml
+++ b/app/src/main/res/layout/list_item_sitio.xml
@@ -17,4 +17,10 @@
         android:layout_height="50dp"
        />
 
+    <TextView
+        android:id="@+id/pais"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_below="@+id/sitioAñadido"
+        />
 </RelativeLayout>
