--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
         android:textSize="8dp"
+        android:orientation="horizontal"
         >
 
 
@@ -43,7 +44,7 @@
             />
 
         <Button
-            android:id="@+id/toJSON"
+            android:id="@+id/eliminar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/boton"
@@ -51,7 +52,7 @@
             android:layout_marginRight="5dp"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
-            android:text="To JSON"
+            android:text="Eliminar Todo"
             android:textSize="12dp"
             />
 
