--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:orientation="vertical"
     android:layout_margin="0dp"
     android:background="@drawable/boton"
-    >
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://schemas.android.com/apk/res/android ">
 
     <TextView
         android:id="@+id/titulo"
@@ -15,7 +16,7 @@
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:text="@string/listado_de_sitios"
-        android:textSize="24sp"/>
+        android:textSize="24sp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -23,13 +24,12 @@
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
         android:textSize="8dp"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
 
 
         <Button
             android:id="@+id/boton_ir_añadir"
-            android:layout_width="match_parent"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@drawable/boton"
@@ -45,7 +45,7 @@
 
         <Button
             android:id="@+id/eliminar"
-            android:layout_width="match_parent"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:background="@drawable/boton"
             android:layout_marginLeft="5dp"
@@ -53,34 +53,7 @@
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
             android:text="Eliminar Todo"
-            android:textSize="12dp"
-            />
-
-
-        <Button
-            android:id="@+id/insertar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/boton"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:text="Insertar"
-            android:textSize="12dp"/>
-
-
-        <Button
-            android:id="@+id/consultar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/boton"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:text="Consultar"
-            android:textSize="12dp"/>
+            android:textSize="12dp" />
 
 
     </LinearLayout>
@@ -92,8 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-       />
+        android:layout_marginTop="20dp" />
 
     <TextView
         android:id="@+id/txtResultado"
